# Learning_MPC_Jumping

./: RAL_env.yml  README.md
hw_exp/: README.md
hw_exp/a1_robot_code_jumpMPC/: CMakeLists.txt
hw_exp/a1_robot_code_jumpMPC/Controllers/: CMakeLists.txt  FSM.cpp  FSM.h  main.cpp
hw_exp/a1_robot_code_jumpMPC/Controllers/BalanceController/: BalanceController.hpp  QPLocomotion.cpp  QPLocomotion.h
hw_exp/a1_robot_code_jumpMPC/Controllers/ConvexMPC/: ConvexMPCLocomotion.cpp  ConvexMPCLocomotion.h  RobotState.cpp  RobotState.h  SolverMPC.cpp  SolverMPC.h  convexMPC_interface.cpp  convexMPC_interface.h
hw_exp/a1_robot_code_jumpMPC/Controllers/optimization_data/jump2D/: parse_data_new.py
hw_exp/a1_robot_code_jumpMPC/Controllers/optimization_data/jump2D/MDC/experiments-2024/: data_F.csv  data_Q.csv  data_pf.csv  data_tau.csv  data_vf.csv  jumpingFull_A1_1ms_h00_d-10_interp.mat  jumpingFull_A1_1ms_h00_d-20_interp.mat  jumpingFull_A1_1ms_h00_d-30_interp.mat  jumpingFull_A1_1ms_h00_d00_interp.mat  jumpingFull_A1_1ms_h00_d10_interp.mat  jumpingFull_A1_1ms_h00_d20_interp.mat  jumpingFull_A1_1ms_h00_d30_interp.mat  jumpingFull_A1_1ms_h00_d40_interp.mat  jumpingFull_A1_1ms_h00_d50_interp.mat  jumpingFull_A1_1ms_h00_d60_interp.mat  jumpingFull_A1_1ms_h00_d70_interp.mat  jumpingFull_A1_1ms_h00_d80_interp.mat  jumpingFull_A1_1ms_h20_d60_interp.mat  parse_data_new.py
hw_exp/a1_robot_code_jumpMPC/low_level_controller/: CMakeLists.txt
hw_exp/a1_robot_code_jumpMPC/low_level_controller/include/: ContactEstimator.h  DesiredCommand.h  FootSwingTrajectory.h  GaitScheduler.h  LegController.h  OrientationEstimator.h  PositionVelocityEstimator.h  Quadruped.h  StateEstimatorContainer.h  body.h  cppTypes.h
hw_exp/a1_robot_code_jumpMPC/low_level_controller/include/NatNet/: NatNetClientHelper.h
hw_exp/a1_robot_code_jumpMPC/low_level_controller/src/: DesiredCommand.cpp  Gait.cpp  LegController.cpp  OrientationEstimator.cpp  PositionVelocityEstimator.cpp  body.cpp
hw_exp/a1_robot_code_jumpMPC/low_level_controller/src/NatNet/: NatNetClientHelper.cpp
hw_exp/a1_robot_code_jumpMPC/low_level_controller/test/: LegControlTest.cpp  footSwingTest.cpp  gamepadTest.cpp  imuTest.cpp
residual_learning/: convert_to_hardware_full.py  evaluate_full.py  train_full.py
residual_learning/data/mix-20traj/1/: com_act.txt  data_f.mat  data_f.txt  data_fcmd.mat  data_fcmd.txt  data_fcmd_new.txt  data_fcmd_total.txt  data_pd.mat  data_pd.txt  joint_act.mat  joint_act.txt  joint_des.mat  pfeet_optitrack.txt  plot_data.m  pos.mat  pos.txt  time.txt  torque.mat  torque.txt
residual_learning/data/mix-20traj/10/: com_act.txt  data_deltaf.txt  data_f.mat  data_f.txt  data_fcmd.mat  data_fcmd.txt  data_fcmd_new.txt  data_pd.mat  (+13 more)
residual_learning/model/: __init__.py  adaptive_dis.py  nn_models.py
residual_learning/utils/: __init__.py  utilities.py
trained_model/: model_g1.pt  model_h1.pt  model_h2.pt
trained_model/adaptive/: quadruped-full-11p-stats.pkl
trained_model/fixed/: quadruped-full-11p-stats.pkl
(+367 files in other folders)
